--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "postcss": "^8.4.12",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "swiper": "^8.1.4"
+    "react-icons": "^4.3.1",
+    "swiper": "^8.1.4",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "eslint": "8.14.0",
