--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "swr": "^1.3.0"
   },
   "devDependencies": {
-    "eslint": "8.14.0",
-    "eslint-config-next": "12.1.5"
+    "acorn": "^8.7.1",
+    "eslint": "^8.14.0",
+    "eslint-config-next": "12.1.5",
+    "json5": "^2.2.1",
+    "rimraf": "^3.0.2",
+    "semver": "^7.3.7"
   }
 }
