--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/image-url": "^1.0.1",
     "next": "12.1.5",
+    "next-sanity": "^0.5.2",
     "postcss": "^8.4.12",
     "react": "18.1.0",
     "react-dom": "18.1.0",
