--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
+    "react-markdown": "^8.0.3",
     "swiper": "^8.1.4",
     "swr": "^1.3.0"
   },
