--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
     "react-markdown": "^8.0.3",
+    "react-syntax-highlighter": "^15.5.0",
+    "react-toastify": "^9.0.1",
     "swiper": "^8.1.4",
     "swr": "^1.3.0"
   },
