--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@sanity/image-url": "^1.0.1",
+    "@splitbee/web": "^0.3.0",
     "next": "12.1.5",
     "next-sanity": "^0.5.2",
     "nextjs-progressbar": "^0.0.14",
@@ -20,6 +21,7 @@
     "react-markdown": "^8.0.3",
     "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^9.0.1",
+    "rehype-raw": "^6.1.1",
     "swiper": "^8.1.4",
     "swr": "^1.3.0"
   },
