--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@sanity/image-url": "^1.0.1",
     "@splitbee/web": "^0.3.0",
     "next": "12.1.5",
+    "next-pwa": "^5.5.2",
     "next-sanity": "^0.5.2",
     "nextjs-progressbar": "^0.0.14",
     "postcss": "^8.4.12",
