--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-markdown": "^8.0.3",
     "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^9.0.1",
+    "rehype-katex": "^6.0.2",
     "rehype-raw": "^6.1.1",
+    "remark-math": "^5.1.1",
     "swiper": "^8.1.4",
     "swr": "^1.3.0"
   },
