--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "12.1.5",
     "next-pwa": "^5.5.2",
     "next-sanity": "^0.5.2",
+    "next-secure-headers": "^2.2.0",
     "nextjs-progressbar": "^0.0.14",
     "postcss": "^8.4.12",
     "react": "18.1.0",
