--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 30001",
+    "dev": "next dev -p 30001 ",
     "build": "next build",
     "start": "next start -p 30001",
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^12.1.6",
     "@sanity/image-url": "^1.0.1",
     "@splitbee/web": "^0.3.0",
     "next": "12.1.5",
+    "next-compose-plugins": "^2.2.1",
     "next-pwa": "^5.5.2",
     "next-sanity": "^0.5.2",
     "next-secure-headers": "^2.2.0",
